docs/1.33/resource/v1beta2/index.md
---
permalink: /1.33/resource/v1beta2/
---

# resource.v1beta2



* [allocatedDeviceStatus](allocatedDeviceStatus.md)
* [allocationResult](allocationResult.md)
* [celDeviceSelector](celDeviceSelector.md)
* [counter](counter.md)
* [counterSet](counterSet.md)
* [device](device.md)
* [deviceAllocationConfiguration](deviceAllocationConfiguration.md)
* [deviceAllocationResult](deviceAllocationResult.md)
* [deviceAttribute](deviceAttribute.md)
* [deviceCapacity](deviceCapacity.md)
* [deviceClaim](deviceClaim.md)
* [deviceClaimConfiguration](deviceClaimConfiguration.md)
* [deviceClass](deviceClass.md)
* [deviceClassConfiguration](deviceClassConfiguration.md)
* [deviceClassSpec](deviceClassSpec.md)
* [deviceConstraint](deviceConstraint.md)
* [deviceCounterConsumption](deviceCounterConsumption.md)
* [deviceRequest](deviceRequest.md)
* [deviceRequestAllocationResult](deviceRequestAllocationResult.md)
* [deviceSelector](deviceSelector.md)
* [deviceSubRequest](deviceSubRequest.md)
* [deviceTaint](deviceTaint.md)
* [deviceToleration](deviceToleration.md)
* [exactDeviceRequest](exactDeviceRequest.md)
* [networkDeviceData](networkDeviceData.md)
* [opaqueDeviceConfiguration](opaqueDeviceConfiguration.md)
* [resourceClaim](resourceClaim.md)
* [resourceClaimConsumerReference](resourceClaimConsumerReference.md)
* [resourceClaimSpec](resourceClaimSpec.md)
* [resourceClaimStatus](resourceClaimStatus.md)
* [resourceClaimTemplate](resourceClaimTemplate.md)
* [resourceClaimTemplateSpec](resourceClaimTemplateSpec.md)
* [resourcePool](resourcePool.md)
* [resourceSlice](resourceSlice.md)
* [resourceSliceSpec](resourceSliceSpec.md)